Fixed color selector widget layout issue in page editor.

--- a/src-gwt/org/opencms/gwt/client/ui/css/colorSelector.css
+++ b/src-gwt/org/opencms/gwt/client/ui/css/colorSelector.css
@@ -23,3 +23,11 @@
 	border-radius: 3px;
 	border: 1px solid #7788AA;
 }
+
+.colorSelectorWidget.colorSelectorWidget.colorSelectorWidget {
+	border-spacing: 5px; 
+}
+
+.colorSelectorWidget img { 
+	vertical-align: baseline;
+}
